@@ -10,6 +10,7 @@ import com.github.javafaker.Faker;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
 import java.util.Random;
@@ -28,7 +29,7 @@ public class DataSeedService {
     @Autowired
     private StudentCourseRepository studentCourseRepository;
 
-    private static final int NUMBER_OF_STUDENTS = 20_000;
+    private static final int NUMBER_OF_STUDENTS = 500;
     private static final int NUMBER_OF_COURSE = 10;
 
     public void seedStudent() {
@@ -57,23 +58,27 @@ public class DataSeedService {
         }
     }
 
+    // fungsi ini diubah karena lamanya proses seeding data
     public void seedStudentCourses() {
         List<Student> students = studentRepository.findAll();
         List<Course> courses = courseRepository.findAll();
+        Random random = new Random();
+
+        List<StudentCourse> allStudentCourses = new ArrayList<>();
 
         for (Student student : students) {
-            List<Course> selectedCourses = new Random().ints(0, courses.size())
+            List<Course> selectedCourses = random.ints(0, courses.size())
                     .distinct()
                     .limit(2)
                     .mapToObj(courses::get)
-                    .collect(Collectors.toList());
+                    .toList();
 
             for (Course course : selectedCourses) {
-                StudentCourse studentCourse = new StudentCourse(student, course);
-                studentCourseRepository.save(studentCourse);
+                allStudentCourses.add(new StudentCourse(student, course));
             }
         }
 
+        studentCourseRepository.saveAll(allStudentCourses);
     }
 
 }
